--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Segoe UI', sans-serif;;
+    font-family: 'Segoe UI', sans-serif;
     background: #eee;
     display: flex;
     justify-content: center;
@@ -37,7 +37,6 @@ button {
     border: none;
     border-radius: 8px;
     font-size: 16px;
-    ;
     margin-top: 18px;
     cursor: pointer;
 }
